...
    <string name="minimize">minimize</string>
    <string name="playback_error">There was a problem playing this audiobook</string>

    <!-- Preferences -->
    <string name="reset_to_defaults">Reset to Defaults</string>
    <string name="no_settings_available">No settings available</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="column_count">Column Count</string>
    <string name="font_family">Font Family</string>
    <string name="font_family_sans_serif">Sans Serif</string>
    <string name="font_family_serif">Serif</string>
    <string name="font_family_open_dyslexic">OpenDyslexic</string>
    <string name="font_family_accessible_dfa">Accessible DFA</string>
    <string name="font_family_ia_writer_duospace">IA Writer Duospace</string>
    <string name="font_size">Font Size</string>
    <string name="font_weight">Font Weight</string>
    <string name="hyphens">Hyphens</string>
    <string name="language">Language</string>
    <string name="letter_spacing">Letter Spacing</string>
    <string name="ligatures">Ligatures</string>
    <string name="line_height">Line Height</string>
...
    <string name="text_align">Text Align</string>
    <string name="theme">Theme</string>
    <string name="word_spacing">Word Spacing</string>
    <string name="page_spacing">Page Spacing</string>
    <string name="fit">Fit</string>
    <string name="scroll_axis">Scroll Axis</string>
    <string name="scroll_mode">Scroll Mode</string>
    <string name="text_align_start">Start</string>
    <string name="text_align_left">Left</string>
    <string name="text_align_right">Right</string>
    <string name="text_align_justify">Justify</string>
    <string name="text_align_center">Center</string>
    <string name="text_align_end">End</string>
...
